# METR4202_Team27

./: .gitignore  README  README.md  WorldThird.world  exploration.py  exploration_strategy.txt  main.py  main2.py  my_texture.material  recovery.py  waypoint_combined.py  waypoint_cycler_recovery.py  waypoint_cycler_recovery_2.py
Old/: waypoint_cycler.py  waypoint_cycler_recovery.py
World/: turtlebot3_world_third.launch.py
arCuo_scanning/: detect_aruco_marker.py  generate_aruco_marker.py  openCvTest.py  usbcam_test.py
waypoint_commander/: main2.py  package.xml  setup.py
waypoint_commander/launch/: exploration.launch.py
