<?xml version="1.0"?>
<package format="3">
  <name>waypoint_commander</name>
  <version>0.0.1</version>
  <description>Exploration and waypoint control for TurtleBot3.</description>
  <maintainer email="your_email@uqconnect.edu.au">Your Name</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <export><build_type>ament_python</build_type></export>
</package>
